reports/quality/2025-09-23/python_test.txt
============================= test session starts ==============================
platform darwin -- Python 3.13.7, pytest-8.4.2, pluggy-1.6.0
rootdir: /Users/lintao/important/ai-customer/voicehelper
configfile: pytest.ini
plugins: langsmith-0.4.29, anyio-4.10.0, cov-7.0.0
collected 14 items / 2 errors

==================================== ERRORS ====================================
__________ ERROR collecting algo/tests/test_bge_faiss_integration.py ___________
ImportError while importing test module '/Users/lintao/important/ai-customer/voicehelper/algo/tests/test_bge_faiss_integration.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/usr/local/Cellar/python@3.13/3.13.7/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/test_bge_faiss_integration.py:13: in <module>
    from core.rag import BgeEmbedder, FaissRetriever, DocumentChunker, FaissIndexBuilder
core/rag/__init__.py:7: in <module>
    from .embedder_bge import BgeEmbedder
core/rag/embedder_bge.py:8: in <module>
    from sentence_transformers import SentenceTransformer
E   ModuleNotFoundError: No module named 'sentence_transformers'
________________ ERROR collecting algo/tests/test_graph_rag.py _________________
../voice_venv/lib/python3.13/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
../voice_venv/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/local/Cellar/python@3.13/3.13.7/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../voice_venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_graph_rag.py:10: in <module>
    from core.graph_rag import (
E     File "/Users/lintao/important/ai-customer/voicehelper/algo/core/graph_rag.py", line 510
E       metadata["techniques_used"].append("vector_search")
E   IndentationError: unexpected indent
=========================== short test summary info ============================
ERROR tests/test_bge_faiss_integration.py
ERROR tests/test_graph_rag.py
!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!!
============================== 2 errors in 0.41s ===============================
